[gd_scene load_steps=9 format=3 uid="uid://c6rr0laopmbai"]

[ext_resource type="Script" uid="uid://cewj3keo8krmk" path="res://UI/hud/hud.gd" id="1_ne75i"]
[ext_resource type="Theme" uid="uid://bphibxtactaw" path="res://UI/themes/main.tres" id="2_8nfoq"]
[ext_resource type="PackedScene" uid="uid://bmgwuoe4437hk" path="res://UI/factory_inventory/factory_inventory.tscn" id="2_upt0d"]
[ext_resource type="Theme" uid="uid://dr6hysqjr06a0" path="res://UI/themes/main-red.tres" id="3_b4xaq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ne75i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ne75i"]
bg_color = Color(0.577008, 0.577008, 0.577008, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bytes"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2o5uh"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ne75i")
drawers_animation_speed = 0.25

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -51.0
offset_right = 88.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BuildButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_8nfoq")
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_ne75i")
action_mode = 0
text = "Build
"

[node name="TruckContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.02
anchor_right = 0.02
offset_right = 165.0
offset_bottom = 40.0

[node name="Game time" type="Label" parent="TruckContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Trucks: "

[node name="Amount" type="Label" parent="TruckContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0x"

[node name="BuildingDrawer" type="Panel" parent="."]
anchors_preset = -1
anchor_left = -0.25
anchor_bottom = 1.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ne75i")

[node name="VBoxContainer" type="VBoxContainer" parent="BuildingDrawer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="CloseWrapper" type="MarginContainer" parent="BuildingDrawer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20

[node name="CloseBuildDrawer" type="Button" parent="BuildingDrawer/VBoxContainer/CloseWrapper"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_b4xaq")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_bytes")
text = "  X  "

[node name="BuildingsButtons" type="VBoxContainer" parent="BuildingDrawer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 50

[node name="SteelFactoryButtonWrapper" type="MarginContainer" parent="BuildingDrawer/VBoxContainer/BuildingsButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10

[node name="SteelFactoryButton" type="Button" parent="BuildingDrawer/VBoxContainer/BuildingsButtons/SteelFactoryButtonWrapper"]
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_8nfoq")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_2o5uh")
text = "Steel Factory"
metadata/_edit_use_anchors_ = true

[node name="AluminiumFactoryButtonWrapper" type="MarginContainer" parent="BuildingDrawer/VBoxContainer/BuildingsButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10

[node name="AluminiumFactoryButton" type="Button" parent="BuildingDrawer/VBoxContainer/BuildingsButtons/AluminiumFactoryButtonWrapper"]
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_8nfoq")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_2o5uh")
text = "Aluminium Factory"
metadata/_edit_use_anchors_ = true

[node name="BioFactoryWrapper" type="MarginContainer" parent="BuildingDrawer/VBoxContainer/BuildingsButtons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10

[node name="BioFactoryButton" type="Button" parent="BuildingDrawer/VBoxContainer/BuildingsButtons/BioFactoryWrapper"]
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_8nfoq")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_2o5uh")
text = "Bio Factory"
metadata/_edit_use_anchors_ = true

[node name="Status" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30

[node name="TimeContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.98
anchor_right = 0.98
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Game time" type="Label" parent="TimeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Game Time: "

[node name="Time" type="Label" parent="TimeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "00:00:00"

[node name="FactoryInventory" parent="." instance=ExtResource("2_upt0d")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MarginContainer/BuildButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="BuildingDrawer/VBoxContainer/CloseWrapper/CloseBuildDrawer" to="." method="_on_close_build_drawer_pressed"]
[connection signal="pressed" from="BuildingDrawer/VBoxContainer/BuildingsButtons/SteelFactoryButtonWrapper/SteelFactoryButton" to="." method="_on_steel_factory_button_pressed"]
[connection signal="pressed" from="BuildingDrawer/VBoxContainer/BuildingsButtons/AluminiumFactoryButtonWrapper/AluminiumFactoryButton" to="." method="_on_aluminium_factory_button_pressed"]
[connection signal="pressed" from="BuildingDrawer/VBoxContainer/BuildingsButtons/BioFactoryWrapper/BioFactoryButton" to="." method="_on_bio_factory_button_pressed"]
